--- a/src/app/components/blog-item-text/blog-item-text.component.html
+++ b/src/app/components/blog-item-text/blog-item-text.component.html
@@ -1,3 +1,6 @@
-<a [routerLink]="['/blog/detail/1']">
+<h4>
+  {{ title }}
+</h4>
+<a [routerLink]="['/blog/detail/',id]">
   {{ text | summary:35}}
 </a>
