--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -1,4 +1,8 @@
-<div *ngFor="let item of items$ | filter: filterText">
- <blog-item [image]=" item.url" [text]="item.title">
-</blog-item>
+<div >
+  <selectize></selectize>
+  <div *ngFor="let item of items$ | filter: filterText" [className]="'main'">
+      <blog-item [title] = "item.title" [id]="item.id" [image]="item.image" [text]="item.text">
+      </blog-item>
+  </div>
 </div>
+
