--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,5 +12,15 @@
     <li class="nav-item">
       <a class="nav-link active" [routerLink]="['/add-post']">Add post</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link active" [routerLink]="['/login']">Login</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link active" [routerLink]="['/signup']">Signup</a>
+    </li>
+    <li>
+      <button (click)="logOut()" class="dropdown-item">Wyloguj</button>
+    </li>
   </ul>
 </nav>
+
